@@ -1,5 +1,8 @@
 # ChangeLog for vserver-utils
 
+  22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> +scripts/lib/vps.sh:
+  Add initng support
+
   22 Jan 2006; Benedikt Böhm <hollow@gentoo.org> +scripts/commands/reload.sh,
   scripts/Makefile.am:
   Add reload command to update limits and settings
